tests/should_succeed/syntax/08_const.rs
extern crate creusot_contracts;
use creusot_contracts::{logic::Seq, *};

#[logic(open)]
pub fn omg<T>() -> Seq<T> {
    Seq::empty()
}
